force-app/main/default/objects/Pokemon__c/fields/FrontDefaultDWImage__c.field-meta.xml
<CustomField>
    <fullName>FrontDefaultDWImage__c</fullName>
    <formula>IMAGE(FrontDefaultDWURL__c, &quot;Front Default Dream World Image&quot; ,100,100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Front Default Dream World Image</label>
    <type>Text</type>
</CustomField>