force-app/main/default/objects/Pokemon__c/fields/FrontDefaultDWURL__c.field-meta.xml
<CustomField>
    <fullName>FrontDefaultDWURL__c</fullName>
    <label>Front Default Dream World URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>