force-app/main/default/objects/Pokemon__c/fields/Id__c.field-meta.xml
<CustomField>
    <fullName>Id__c</fullName>
    <externalId>true</externalId>
    <label>Id</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>