force-app/main/default/objects/Pokemon__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FrontDefaultDWImage__c</columns>
    <columns>Id__c</columns>
    <columns>Height__c</columns>
    <columns>Weight__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>